<resources>
    <string name="app_name">MyVocabulary</string>
    <string name="btn_add">Add words</string>
    <string name="btn_learn">Learn!</string>
    <string name="txt_welcome">Welcome</string>
    <string name="btn_end">End</string>
    <string name="about_text">
        У лукоморья дуб зеленый; \n
        Златая цепь на дубе том: \n
        И днем и ночью <b>кот ученый</b> \n
        Все ходит по цепи кругом; \n
        Идет <b>направо</b> - песнь заводит, \n
        <b>Налево</b> - сказку говорит.
    </string>
    <string name="title_activity_experiment">ExperimentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_settings">Настройки</string>
    <string name="mode_one">Рус->Eng</string>
    <string name="mode_two">Eng->Рус</string>
    <string name="mode_three">Random</string>
    <string name="save">Save</string>
    <string name="open">Open</string>

    <string name="pref_openmode">Режим открытия</string>
    <string name="pref_color">Цвет</string>
    <string name="pref_color_black">Черный цвет</string>
    <string name="pref_color_red">Красный цвет</string>
    <string name="pref_color_green">Зеленый цвет</string>
    <string name="pref_color_blue">Синий цвет</string>
    <string name="pref_size">Размер</string>
    <string name="pref_style">Стиль</string>
    <string name="pref_style_regular">Нормальный</string>
    <string name="pref_style_bold">Полужирный</string>
    <string name="pref_style_italic">Курсив</string>


</resources>
