<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/mode_one"
        android:orderInCategory="100"
        android:title="@string/mode_one"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mode_two"
        android:orderInCategory="100"
        android:title="@string/mode_two"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mode_three"
        android:orderInCategory="100"
        android:title="@string/mode_three"
        app:showAsAction="never"/>
    </group>


</menu>