<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/pref_openmode"
        android:title="Открыть"
        android:summary="Открывать файл при запуске приложения"/>
    <EditTextPreference
        android:key="@string/pref_size"
        android:title="Размер шрифта"
        android:summary="Устанавливает новый размер шрифта"
        android:hint="Введите размер шрифта от 10 до 32"
        android:defaultValue="14sp"
        />
    <ListPreference
        android:key="@string/pref_style"
        android:title="Стиль шрифта"
        android:summary="Устанавливает стиль для шрифта"
        android:entries="@array/text_style"
        android:entryValues="@array/text_style"
        android:defaultValue="1"
        android:dialogTitle="Выбирете стиль для шрифта"/>



</PreferenceScreen>